Se borró entidad Usuario y se arregló las consecuencias